--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,7 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_logout"
-        android:title="Sair / Trocar Usuário"
+        android:id="@+id/action_update_rates"
+        android:icon="@drawable/ic_edit"
+        android:title="@string/menu_update_rates"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_save_trip"
+        android:icon="@drawable/ic_edit"
+        android:title="@string/menu_save_trip"
         app:showAsAction="never" />
 </menu>
